# vc

./: .gitignore  LICENSE  accounts.py  api_utils.py  closed.py  custom_types.py  functions.py  main.py  opened.py  pyproject.toml  ui.py
accounts/: -111111111.json  000000000.json  224513815.json  443835275.json  490817878.json  541161804.json  573862980.json  595349223.json  646717936.json  702537713.json  710686293.json  764036910.json  790817098.json
api_utils_folder/: custom_types.py  settings.py
data/-111111111/: account.json  country.json  valute.json
data/000000000/: account.json  country.json
data/224513815/: account.json  country.json
data/443835275/: account.json  country.json  valute.json
data/490817878/: account.json  country.json  valute.json
data/541161804/: account.json  country.json  geo.geojson  valute.json
data/573862980/: account.json  country.json
data/595349223/: account.json  country.json
data/646717936/: account.json  country.json
data/702537713/: account.json  country.json  valute.json
data/710686293/: account.json  country.json
data/764036910/: account.json  country.json  valute.json
data/790817098/: account.json  country.json
html/: admin.html
html/static/: admin.css  admin.js
utils/: accounts.py  custom_types.py
