[tool.poetry]
name = "repl_nix_vc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
fuzzywuzzy = "^0.18.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
python-Levenshtein = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
