[tool.poetry]
name = "ouvc-api"
version = "0.1"
description = "The API Site for OUVC sites."
authors = ["Matvey Buldakov <m.buldakov10min@gmail.com>"]
license = "MIT-License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
fuzzywuzzy = "^0.18.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
python-Levenshtein = "^0.21.1"
pip = "^23.2.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
